# brulee

./: LICENSE  README.md  bun.lockb  index.html  package.json
.github/workflows/: main.yml
src/: main.ts  style.css  style.css.map  style.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: conf.rs  lib.rs  main.rs  project.rs
src/scss/: _fonts.scss  _main_cont.scss  _status_bar.scss  _theme.scss
src/scss/dockers/: _button_docker.scss  _editor_docker.scss  _left_docker.scss
src/tab_engine/: tab.ts  tab_cont.ts  tab_content.ts  tab_engine.ts
src/ts/: config_manager.ts  theme_editor.ts
subwindows/theme_settings/: index.html  main.ts  style.css  style.css.map  style.scss
