[package]
name = "brulee"
version = "0.0.0"
description = "Cute C/CPP IDE"
authors = ["OsakiTsukiko"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-remove-dir", "fs-remove-file", "fs-read-dir", "fs-exists", "fs-create-dir", "fs-read-file", "fs-copy-file", "fs-write-file", "fs-rename-file", "path-all", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
